implement storage
- also, break down schema a bit to simplify
