# openapi.yml
@@ -48,7 +48,9 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/MachineReport"
+              type: array
+              items:
+                $ref: "#/components/schemas/LocationScan"
       responses:
         '201':
           description: Created
@@ -66,7 +68,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/MachineReport"
+                  type: string
         '500':
           $ref: '#/components/responses/InternalServerError'
 
@@ -101,33 +103,29 @@ components:
           type: string
       required:
         - message
-    MachineReport:
-      description: A warehouse report generated by a machine, containing location information
-      type: array
-      items:
-        type: object
-        title: LocationScan
-        description: Information about a specific location scanned by a machine
-        properties:
-          name:
+    LocationScan:
+      type: object
+      description: Information about a specific location scanned by a machine
+      properties:
+        name:
+          type: string
+          description: Name of the location
+        scanned:
+          type: boolean
+          description: Indicates if the location was scanned
+        occupied:
+          type: boolean
+          description: Indicates if the location is occupied
+        detected_barcodes:
+          type: array
+          description: List of detected barcodes in this location
+          items:
             type: string
-            description: Name of the location
-          scanned:
-            type: boolean
-            description: Indicates if the location was scanned
-          occupied:
-            type: boolean
-            description: Indicates if the location is occupied
-          detected_barcodes:
-            type: array
-            description: List of detected barcodes in this location
-            items:
-              type: string
-        required:
-          - name
-          - scanned
-          - occupied
-          - detected_barcodes
+      required:
+        - name
+        - scanned
+        - occupied
+        - detected_barcodes
 
     ComparisonReport:
       description: A report comparing a machine report to a user report
